[tool.poetry]
name = "index"
version = "0.1.0"
description = ""
authors = ["Ng Guoyou <gyng@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
reverse-geocode = "^1.4.1"
exifread = "^3.0.0"
click = "^8.1.7"
torch = "^2.1.1"
fast-colorthief = "^0.0.5"
janus = {git = "ssh://git@github.com/deepseek-ai/Janus.git", rev = "main"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
