[project]
name = "index"
version = "0.1.0"
description = ""
authors = [{ name = "Ng Guoyou", email = "gyng@users.noreply.github.com" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "reverse-geocode>=1.4.1,<2",
    "exifread>=3.0.0,<4",
    "click>=8.1.7,<9",
    "torch>=2.1.1,<3",
    "fast-colorthief>=0.0.5,<0.0.6",
    "janus",
]

[tool.uv]

[tool.uv.sources]
janus = { git = "ssh://git@github.com/deepseek-ai/Janus.git", rev = "main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.11.2",
]
